argocd/applications/default/esphome/90-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome-deployment
  namespace: default
  labels:
    app: esphome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - optiplex
      hostNetwork: true
      containers:
      - name: esphome
        image: ghcr.io/esphome/esphome:2025.2.1
        command:
          - "bash"
        args:
          - "-c"
          - "esphome dashboard ."
        securityContext:
          privileged: true
        volumeMounts:
        - name: esphome-config
          mountPath: /config
        - name: esphome-cache
          mountPath: /cache
        - name: usb
          mountPath: /dev/bus/usb
      volumes:
      - name: esphome-config
        hostPath:
          path: /mnt/shared_data/k8s/esphome/config
      - name: esphome-cache
        emptyDir:
          sizeLimit: 1000Mi
      - name: usb
        hostPath:
          path: /dev/bus/usb
