argocd/applications/default/esphome/90-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "kokev-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: esphome.kokev.de
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: esphome-service
                port:
                  number: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - esphome.kokev.de
      secretName: esphome-tls
